Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Changed maximum allowed size for OOo documents to 5 Mb instead of 20 Mb which
  was too far from reality.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-