@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Added an "Edit online" action for the Document OpenOffice.org DocBook type
+  directly in the object action box.
 Bug fixes:
 ~~~~~~~~~~
 - Changed maximum allowed size for OOo documents to 5 Mb instead of 20 Mb which
